# quidnug

./: .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  config.example.yaml  go.mod  go.sum
.brokk/: project.properties
.github/ISSUE_TEMPLATE/: peering_request.md
.github/workflows/: ci.yml  js-client.yml  publish-image.yml  sdk-matrix.yml
UseCases/: ARCHITECTURE.md  BUILDING-A-USE-CASE.md  README.md
UseCases/ai-agent-authorization/: README.md  implementation.md  threat-model.md
UseCases/ai-content-authenticity/: README.md  implementation.md  threat-model.md
UseCases/ai-model-provenance/: README.md  implementation.md  threat-model.md
UseCases/b2b-invoice-financing/: README.md  implementation.md  threat-model.md
UseCases/credential-verification-network/: README.md  implementation.md  threat-model.md
UseCases/decentralized-credit-reputation/: README.md  architecture.md  implementation.md  threat-model.md
UseCases/defi-oracle-network/: README.md  implementation.md  threat-model.md
UseCases/developer-artifact-signing/: README.md  implementation.md  threat-model.md
UseCases/dns-replacement/: README.md  architecture.md  implementation.md  threat-model.md
UseCases/elections/: README.md  architecture.md  implementation.md  integration.md  launch-checklist.md  operations.md  threat-model.md
UseCases/enterprise-domain-authority/: README.md  architecture.md  integration.md  (+2 more)
blogs/: 2026-04-20-proof-of-trust-vs-consensus-mechanisms.md  2026-04-20-relativistic-ratings-end-of-review-spam.md  2026-04-22-ai-agent-identity-crisis.md  2026-04-23-reproducibility-crisis-tamper-evident-peer-review.md  2026-04-24-deepfakes-trust-endgame.md  2026-04-25-third-party-risk-management-nightmare.md  2026-04-26-clinical-trial-data-integrity.md  2026-04-27-carbon-credits-are-being-gamed.md  2026-04-28-whistleblower-channel.md  README.md
clients/python/: README.md  pyproject.toml
clients/python/examples/: event_stream.py  guardian_recovery.py  merkle_proof.py  quickstart.py
clients/python/quidnug/: __init__.py  async_client.py  client.py  crypto.py  errors.py  merkle.py  types.py  wire.py
clients/python/tests/: test_async_client.py  test_client.py  test_crypto.py  test_merkle.py  test_types.py  test_vectors.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: merkle_proof.rs  quickstart.rs
clients/rust/src/: canonical.rs  client.rs  crypto.rs  error.rs  lib.rs  merkle.rs  types.rs  wire.rs
clients/rust/tests/: client_test.rs  vectors_test.rs
docs/: api-spec.yaml  architecture.md  faq.md  integration-guide.md  openapi.yaml  protocol-v1.0.md  roadmap.md  rogue-node-security.md
examples/: README.md  RUNBOOK.md
schemas/: README.md  openapi-README.md  openapi.yaml
scripts/: gen_deck_core.py  gen_deck_part1.py  gen_deck_part2.py  gen_deck_part3.py  gen_deck_part4.py  generate_presentation.py
(+741 files in other folders)
