[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quidnug"
version = "2.0.0"
description = "Python client SDK for Quidnug — a decentralized protocol for relational trust"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "The Quidnug Authors" }
]
keywords = [
  "quidnug",
  "trust",
  "identity",
  "cryptography",
  "decentralized",
  "blockchain"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "cryptography>=41.0",
  "requests>=2.28"
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "pytest-asyncio", "ruff", "mypy"]
async = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/bhmortim/quidnug"
Documentation = "https://github.com/bhmortim/quidnug/tree/main/clients/python"
Repository = "https://github.com/bhmortim/quidnug"
Issues = "https://github.com/bhmortim/quidnug/issues"

[tool.setuptools.packages.find]
include = ["quidnug*"]

[tool.setuptools.package-data]
quidnug = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
strict = true
python_version = "3.9"
