[package]
name = "quidnug"
version = "2.0.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Rust client SDK for Quidnug — a decentralized protocol for relational trust"
repository = "https://github.com/bhmortim/quidnug"
homepage = "https://github.com/bhmortim/quidnug"
keywords = ["quidnug", "trust", "identity", "decentralized", "blockchain"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
hex = "0.4"
thiserror = "1"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = false }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "merkle_proof"
path = "examples/merkle_proof.rs"
